E2E tests and packaging implemented:
 - App main loop implemented
 - Revised some integration tests
 - Dockerfile and docker-compose.yml
 - Some refactoring in unit tests